--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,95 @@
-.App {
-  text-align: center;
+*{
+  font-family: Poppins;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#drum-machine {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+  background-color: #2e344a;
+  box-shadow: 0 0 250px rgba(0, 0, 0, 0.293) inset;
+  color: #fff;
 }
 
-.App-link {
-  color: #61dafb;
+#display {
+  font-size: 24px;
+  margin-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.drum-pads {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+}
+
+.headerText{
+  cursor: default;
+}
+
+.drum-pad {
+  display: flex;
+  font-weight: bold;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 5px 10px 0px rgba(0, 0, 0, 0.123);
+  width: 100px;
+  height: 100px;
+  border-radius: 5px;
+  background-color: #52708f;
+  /* Default background color */
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  transition: background-color 0.3s ease;
+  /* Smooth transition for background color */
+}
+
+.drum-pad:hover {
+  background-color: #555;
+  /* Color change on hover */
+}
+
+.drum-pad-key {
+  font-size: 24px;
+  pointer-events: none;
+  color: #fff;
+  /* Text color */
+}
+
+.clip {
+  display: none;
+}
+
+.sound-wave {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 50px;
+  height: 50px;
+  border: 5px solid transparent;
+  border-bottom: 5px solid rgba(255, 255, 255, 0.7);
+  border-radius: 50%;
+  animation: sound-wave-animation 0.3s ease-in-out;
+}
+
+@keyframes sound-wave-animation {
+  0% {
+    width: 0;
+    height: 0;
+    opacity: 1;
   }
-  to {
-    transform: rotate(360deg);
+
+  100% {
+    width: 100px;
+    height: 100px;
+    opacity: 0;
   }
 }
+
+/* .sound-wave-active {
+  animation: none;
+}
+*/
